<?xml version="1.0"?>
<package>
  <name>msdi_ros</name>
  <version>1.0.0</version>
  <description>

    ROS Wrapper for MSDI dataset.

  </description>

  <author>Weichen Dai</author>
  <license>see homepage</license>
  <maintainer email="weichendai-@in-hotmail.com">
    Weichen Dai
  </maintainer>
  <!-- <review status="unreviewed" notes=""/> -->
  <url>https://weichnn.github.io</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
</package>
